# rust-python-talk-2025

./: Cargo.toml  Makefile  README.md  baseline.py  histogram_1k.txt  pyproject.toml  rust_test.py  slides.md
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs
